--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Mansüt Gıda - Doğal ve katkısız süt ürünleri. Taze süt, yoğurt, peynir ve daha fazlası. Türkiye'nin güvenilir süt ürünleri markası." />
+    <meta name="keywords" content="süt ürünleri, doğal süt, yoğurt, peynir, ayran, mansüt gıda, taze süt" />
+    <meta name="author" content="Mansüt Gıda" />
+    <title>Mansüt Gıda - Doğallığın ve Lezzetin Buluşma Noktası</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
